change application controller to use better auth